k8s/postgres.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gamist
  labels:
    app: gamist

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamist-db
  namespace: gamist
  labels:
    app: gamist-db
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: gamist-db
  template:
    metadata:
      namespace: gamist
      labels:
        app: gamist-db
    spec:
      containers:
        - name: gamist-db
          image: postgres:13.3
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - pidof
                - postgres
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - pidof
                - postgres
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 120
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 500Mi
---
kind: Service
apiVersion: v1
metadata:
  namespace: gamist
  name: gamist-db-svc
  labels:
    app: gamist-db
spec:
  selector:
    app: gamist-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
