k8s/backend.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gamist
  labels:
    app: gamist

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamist-backend
  namespace: gamist
  labels:
    app: gamist-backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  selector:
    matchLabels:
      app: gamist-backend
  template:
    metadata:
      namespace: gamist
      labels:
        app: gamist-backend
    spec:
      containers:
        - name: gamist-backend
          image: vscncls/gamist-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 20
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 120
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 300m
              memory: 500Mi
---
kind: Service
apiVersion: v1
metadata:
  namespace: gamist
  name: gamist-backend-svc
  labels:
    app: gamist-backend
spec:
  selector:
    app: gamist-backend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamist-backend-ingress
  namespace: gamist
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/load-balance: ewma
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-body-size: 1m
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: gamist.local
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: gamist-backend-svc
                port:
                  number: 80
